--- a/6shen.html
+++ b/6shen.html
@@ -23,7 +23,7 @@
     <font color="gray" size="3" face="Courier New">
     Thanks for downloading,this app made in 🇮🇩 with ♥️</font><br><br>
     <audio id="audioNotifikasi">
-  <source src="https://a.top4top.io/m_3303tv8ct0.mp3" type="audio/mpeg">
+  <source src="https://c.top4top.io/m_3664zur180.mp3" type="audio/mpeg">
 </audio>
 <button style="border:2px solid gray; border-radius:30px; background-color:black;" onclick="playAudio()" type="button"><font face="monaco" size="6" color="gray">Play to Music</font></button>
 <button style="border:2px solid gray; border-radius:30px; background-color:black;" onclick="pauseAudio()" type="button"><font face="monaco" size="6" color="gray">Pause to Music</font></button> <br>
