--- a/6shen.html
+++ b/6shen.html
@@ -21,7 +21,7 @@
 </div><br>
     <font color="gray" size="3" face="Courier New">Share my app with your friends, you can find genuine without any virus.</font><br><br<br>
     <font color="gray" size="3" face="Courier New">
-    Thanks for downloading,this app made with ♥️ in Indonesia</font><br><br>
+    Thanks for downloading,this app made with ♥️ in Indonesia.</font><br><br>
     <audio id="audioNotifikasi">
   <source src="https://c.top4top.io/m_3664zur180.mp3" type="audio/mpeg">
 </audio>
